# UFJF-DCC166

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: plots.py  sensitivity.py  streamlit_app.py
app/tabs/: __init__.py  continuidade.py  metodologia.py  sensibilidade.py  visao_geral.py  wip.py
notebooks/: 00_ingestao.ipynb  01_eda_am.ipynb
src/ufjf_dcc166/: __init__.py
tvc-1/: .gitignore
tvc-1/.streamlit/: config.toml
tvc-1/app/: config.py  data.py  plots.py  requirements.txt  sensitivity.py  streamlit_app.py
tvc-1/app/tabs/: metodologia.py  visao_geral.py
tvc-1/data/processed/: mart_apac_mensal.parquet  mart_autorizacao.parquet  mart_paciente_mes.parquet
tvc-1/notebooks/: 01_eda_am.ipynb  02_etl_mart.ipynb
tvc-2/: .gitignore  README.md  requirements.txt
tvc-2/.streamlit/: config.toml
tvc-2/app/: config.py  data.py  plots.py  requirements.txt  roi_model.py  streamlit_app.py
tvc-2/app/tabs/: __init__.py  otimizacao.py  sensibilidade.py  sobre.py  visao_geral.py  what_if.py
tvc-2/data/processed/: mart_ads_performance.csv  mart_aggregated.csv  mart_roi_parameters.csv
tvc-2/notebooks/: 00_ingestao.ipynb  01_eda_marketing.ipynb  02_etl_mart.ipynb
tvc-3/: .gitignore  Makefile  README.md  pyproject.toml
tvc-3/app/: app.py  config.py  explain.py  plots.py  requirements.txt  risk_scoring.py  soc_data.py  streamlit_app.py
tvc-3/app/simulation/: __init__.py  event_buffer.py  traffic_mixer.py  traffic_stream.py
tvc-3/app/views/: __init__.py  alertas.py  cenarios.py  explicabilidade.py  performance.py  tempo_real.py  visao_geral.py
tvc-3/configs/: config.yaml
tvc-3/data/processed/: test.parquet
tvc-3/models/: features.joblib  label_encoder.joblib  training_summary.json
tvc-3/notebooks/: exploratory.ipynb  modeling.ipynb
tvc-3/references/: CIC IoT 2023.md
tvc-3/report/: .gitignore  main.tex  sbc-template.bib
tvc-3/reports/: feature_selection.json  feature_selection.md
tvc-3/reports/shap/: feature_importance.csv  shap_bundle.joblib
tvc-3/slides/: .gitignore  main.tex
tvc-3/src/data/: __init__.py  features.py  load.py  preprocess.py
tvc-3/src/decision_support/: __init__.py  recommendations.py  risk_scoring.py
tvc-3/src/explainability/: __init__.py  shap_analysis.py
tvc-3/src/models/: __init__.py  evaluate.py  predict.py  train.py
tvc-3/src/simulation/: __init__.py  traffic_stream.py
tvc-3/src/tuning/: __init__.py  optuna_search.py
tvc-3/src/utils/: config.py  io.py  logging.py  mlflow_utils.py  paths.py  seeds.py
(+1 files in other folders)
