[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ufjf-dcc166"
version = "0.1.0"
description = "SAD Gaucher - SIA-AM (UFJF DCC166)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.2",
    "odfpy>=1.4.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=1.26.2",
    "pandas>=2.3.3",
    "plotly>=5.24",
    "pyarrow>=24.0.0",
    "pysus==1.0.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "streamlit>=1.40",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ufjf_dcc166"]

[tool.uv]
package = true
