[project]
name = "tvc-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Antônio Marcos", email = "antoniomarcos.souza2002@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
tvc-3 = "tvc_3:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
