[project]
name = "tvc-3"
version = "0.1.0"
description = "Sistema de Apoio à Decisão para Segurança em Redes IoT"
readme = "README.md"
authors = [
    { name = "Antônio Marcos", email = "antoniomarcos.souza2002@gmail.com" }
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    "optuna>=4.0.0",
    "mlflow>=2.18.0",
    "shap>=0.46.0",
    "numba>=0.60.0",
    "plotly>=5.24.0",
    "streamlit>=1.40.0",
    "pyyaml>=6.0.0",
    "joblib>=1.4.0",
    "matplotlib>=3.9.0",
    "imbalanced-learn>=0.12.0",
    "pyarrow>=18.0.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["README.md"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "W", "F", "A", "I", "B", "PLC", "PLE", "PLW", "ERA"]
